# cloak

./: README.md  README_CN.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: release.js
src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  reader.json  settings.json  update.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250526100933_novel_table.sql  20250529083520_init.sql  20250606094821_init.up.sql  20250620063501_progress.down.sql  20250620063501_progress.up.sql  20250621064533_init.down.sql  20250621064533_init.up.sql  20250701030831_last_read_novel.down.sql  20250701030831_last_read_novel.up.sql  20250709094850_epub.down.sql  20250709094850_epub.up.sql
src-tauri/src/: db.rs  lib.rs  reader.rs  state.rs  utils.rs  window.rs
src-tauri/src/commands/: common.rs  config.rs  mod.rs  novel.rs  os.rs  reader.rs  shortcut.rs  utils.rs  window.rs
src-tauri/src/constants/: event.rs  store.rs
src-tauri/src/db/: mod.rs  model.rs
src-tauri/src/state/: mod.rs  model.rs
src-tauri/src/store/: mod.rs  model.rs
src-tauri/src/utils/: icon.rs  mod.rs  novel.rs  reader.rs  shortcut.rs  sql.rs  state.rs  store.rs  update.rs  window.rs
src/components/: theme-provider.tsx
src/components/titlebar/: button.tsx  context.tsx  controls.tsx  icons.tsx  index.ts  title-bar.tsx  types.ts
src/components/ui/: dialog.tsx  (+5 more)
src/hooks/: use-form-watch.ts
src/lib/: number.ts  platform.ts
src/windows/: index.ts
(+44 files in other folders)
